public class Caminhao extends Veiculo {
   
}
