public class Carro extends Veiculo {


}
