
import java.util.ArrayList;

public class Gerente extends Vendedor {

}
