public class Moto extends Veiculo {
  

}