public abstract class Veiculo {
  private static int total = 0;

}
