
import java.util.ArrayList;

public class Vendedor {
  private static int total = 0;
  
 
  }
  


